--- a/ArrayListAula/.project
+++ b/ArrayListAula/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ArraysDeNovo</name>
+	<name>ArrayListAula</name>
 	<comment></comment>
 	<projects>
 	</projects>
